                        \ \ /\ / / _ \ '_ \ / _` | | | |
                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      synthesizing partners for services
                      http://service-technology.org/wendy


Version 2.2-unreleased
======================

* added test cases to test Wendy's integration into Marlene

* no output files are created in case of uncontrollability (unless
  `--diagnose' is given)

* implemented parameter `--stats' to display information on runtime and
  memory consumption (the latter uses `ps' and does not work under Cygwin)

Version 2.1 (6 September 2009)
==============================

* fixed (known) issues concerning reduction rule "succeeding sending event"
  (parameter: `--succeedingSendingEvent')

* issues on the hidden parameter "quit as soon as possible" (parameter:
  `--succeedingSendingEvent') have been fixed

* implemented on-the-fly knowledge analysis

* added test case with insane nontrivial TSCC

* integrated LoLA SCCs detection within inner markings

* generated temporary files are always deleted unless the `--noClean'
  parameter is given; removed parameter `--clean'

* fixed 64-bit support: Wendy natively supports 32 and 64 bit compilations
  using GCC's switches `-m32' and `-m64', respectively. To successfully
  execute `make check', you need to compile the Petri Net API and Mia with
  the same options.

* allocated memory can be released using the (undocumented) parameter
  `--finalize'; fixed most memory leaks

* simplified interface to `Output' class managing file output

Version 2.0 (26 August 2009)
============================

* removed parameter `--noDeadlockDetection'

* reorganized internal livelock detection; avoided additional bit to be
  stored for each internal marking

* fixed bug #14166 (`https://gna.org/bugs/?14166'): adding dead dummy