@@ -1,0 +1,38 @@
+{
+  net size:     |P|=34, |P_in|= 6, |P_out|= 6, |T|=15, |F|=54
+}
+
+INTERFACE
+  SYNCHRONOUS
+    a,
+    b,
+    c;
+
+PLACE
+  p1, p2, p3;
+
+
+INITIALMARKING
+  p1:	1;
+
+FINALMARKING
+  p3;
+
+
+TRANSITION t1 { #a }
+  CONSUME p1;
+  PRODUCE p2; 
+  SYNCHRONIZE a;
+
+TRANSITION t2 { #b }
+  CONSUME p2;
+  PRODUCE p1; 
+  SYNCHRONIZE b;
+
+TRANSITION t3 { #c }
+  CONSUME p1;
+  PRODUCE p3; 
+  SYNCHRONIZE c;
+
+{ END OF FILE `.owfn' }
+
