@@ -790,6 +790,13 @@ AT_CHECK([GREP -q "YES" stdout])
 AT_KEYWORDS(ig qsp)
 AT_CLEANUP
 
+AT_SETUP([Generic Example, Quit as soon as possible])
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/genericNonTrivialSCC.owfn .])
+AT_CHECK([WENDY genericNonTrivialSCC.owfn --verbose --messagebound=4 --quitAsSoonAsPossible],0,ignore,stderr)
+AT_CHECK([GREP -q "net is controllable: NO" stderr])
+AT_KEYWORDS(ig qsp)
+AT_CLEANUP
 
 ############################################################################
 AT_BANNER([Synchronous Communication])
@@ -835,6 +842,13 @@ AT_CHECK([GREP -c "\->" sync_deadlock.og],0,[5
 AT_KEYWORDS(synchronous)
 AT_CLEANUP
 
+AT_SETUP([Generic Example, Quit as soon as possible + LF])
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/genericSynchLFQAP.owfn .])
+AT_CHECK([WENDY genericSynchLFQAP.owfn --verbose --lf --quitAsSoonAsPossible],0,ignore,stderr)
+AT_CHECK([GREP -q "net is controllable: YES" stderr])
+AT_KEYWORDS(synchronous ig qsp)
+AT_CLEANUP
 
 ############################################################################
 AT_BANNER([Cover Constraints])
@@ -918,6 +932,13 @@ AT_CHECK([GREP -q "net is controllable: NO" stderr])
 AT_KEYWORDS(livelock-freedom)
 AT_CLEANUP
 
+AT_SETUP([Generic Example, Quit as soon as possible + LF])
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/genericNonTrivialSCC.owfn .])
+AT_CHECK([WENDY genericNonTrivialSCC.owfn --verbose --messagebound=4 --quitAsSoonAsPossible --lf --lola=LOLA],0,ignore,stderr)
+AT_CHECK([GREP -q "net is controllable: NO" stderr])
+AT_KEYWORDS(livelock-freedom)
+AT_CLEANUP
 
 ############################################################################
 AT_BANNER([Integration into Mia])
